--- a/Circular/iPhone4.storyboard
+++ b/Circular/iPhone4.storyboard
@@ -279,6 +279,9 @@
         <image name="white.jpg" width="60" height="60"/>
     </resources>
     <classes>
+        <class className="AGMedallionView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/AGMedallionView.h"/>
+        </class>
         <class className="CustomCell" superclassName="UITableViewCell">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/CustomCell.h"/>
             <relationships>
@@ -316,10 +319,11 @@
         <class className="ProfileViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ProfileViewController.h"/>
             <relationships>
+                <relationship kind="action" name="changeCoverPhoto_btn:"/>
                 <relationship kind="action" name="revealMenu:"/>
                 <relationship kind="outlet" name="barItem" candidateClass="UIBarButtonItem"/>
-                <relationship kind="outlet" name="image" candidateClass="UIImage"/>
-                <relationship kind="outlet" name="profile_btn" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="cover_btn" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="medallionView" candidateClass="AGMedallionView"/>
                 <relationship kind="outlet" name="topBar" candidateClass="UINavigationBar"/>
             </relationships>
         </class>
